Loads of changes

--- a/simple_model_comparison.ipynb
+++ b/simple_model_comparison.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -11,7 +11,7 @@
        "<module 'config' from '/home/deus/Documents/trajectory-prediction/config.py'>"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -19,7 +19,8 @@
    "source": [
     "from importlib import reload\n",
     "import parsing\n",
-    "import models\n",
+    "import model_path\n",
+    "import model_goal\n",
     "import model_interface\n",
     "import visualization\n",
     "import util\n",
@@ -40,55 +41,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "  1%|          | 7/1224 [00:00<00:17, 69.74it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "           time       id      x      y         z  velocity  motion_angle  \\\n",
-      "0  1.352853e+09  9315400  39830 -22779  1704.245   823.082        -0.499   \n",
-      "1  1.352853e+09  9330400  34873 -17618  1467.723  1280.126         2.821   \n",
-      "2  1.352853e+09  9330600  -9670   7396  1230.397  1095.896         2.322   \n",
-      "3  1.352853e+09  9315400  39848 -22802  1704.947   903.930        -0.648   \n",
-      "4  1.352853e+09  9330400  34830 -17590  1466.868  1302.011         2.751   \n",
-      "\n",
-      "   facing_angle  \n",
-      "0        -0.708  \n",
-      "1         2.799  \n",
-      "2         2.357  \n",
-      "3        -0.732  \n",
-      "4         2.748  \n",
-      "time    float64\n",
-      "id        int64\n",
-      "x         int64\n",
-      "y         int64\n",
-      "dtype: object\n",
-      "           time       id      x      y\n",
-      "0  1.352853e+09  9315400  39830 -22779\n",
-      "1  1.352853e+09  9330400  34873 -17618\n",
-      "2  1.352853e+09  9330600  -9670   7396\n",
-      "3  1.352853e+09  9315400  39848 -22802\n",
-      "4  1.352853e+09  9330400  34830 -17590\n",
-      "0   2012-11-14 00:33:08.708000000\n",
-      "1   2012-11-14 00:33:08.708000000\n",
-      "2   2012-11-14 00:33:08.708000000\n",
-      "3   2012-11-14 00:33:08.742000128\n",
-      "4   2012-11-14 00:33:08.742000128\n",
-      "Name: time, dtype: datetime64[ns]\n",
-      "time    datetime64[ns]\n",
-      "id               int64\n",
-      "x              float64\n",
-      "y              float64\n",
-      "dtype: object\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 1224/1224 [00:17<00:00, 71.66it/s]\n"
+      "100%|██████████| 1224/1224 [00:17<00:00, 71.15it/s] \n"
      ]
     },
     {
@@ -96,10 +49,10 @@
      "output_type": "stream",
      "text": [
       "Dividing 697 human trajectories: 627 training, 70 eval, 0 test\n",
-      "train (224340, 40, 2) float64 (224340, 25) float32 (224340, 40, 2) float64\n",
-      "eval (24880, 40, 2) float64 (24880, 25) float32 (24880, 40, 2) float64\n",
-      "(24880, 25)\n",
-      "[0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 1. 0. 0. 0. 0.\n",
+      "train (227965, 40, 2) float64 (227965, 25) float32 (227965, 40, 2) float64\n",
+      "eval (21255, 40, 2) float64 (21255, 25) float32 (21255, 40, 2) float64\n",
+      "(21255, 25)\n",
+      "[0. 0. 0. 0. 0. 1. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.\n",
       " 0.]\n"
      ]
     }
@@ -117,160 +70,95 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(224340, 40, 2)\n",
-      "Model: \"model\"\n",
+      "Model: \"model_6\"\n",
       "_________________________________________________________________\n",
       "Layer (type)                 Output Shape              Param #   \n",
       "=================================================================\n",
-      "input_1 (InputLayer)         [(None, 40, 2)]           0         \n",
+      "input_7 (InputLayer)         [(None, 40, 2)]           0         \n",
       "_________________________________________________________________\n",
-      "conv1d (Conv1D)              (None, 38, 64)            448       \n",
+      "conv1d_6 (Conv1D)            (None, 38, 32)            224       \n",
       "_________________________________________________________________\n",
-      "conv1d_1 (Conv1D)            (None, 36, 32)            6176      \n",
+      "max_pooling1d_6 (MaxPooling1 (None, 19, 32)            0         \n",
       "_________________________________________________________________\n",
-      "max_pooling1d (MaxPooling1D) (None, 18, 32)            0         \n",
+      "flatten_6 (Flatten)          (None, 608)               0         \n",
       "_________________________________________________________________\n",
-      "flatten (Flatten)            (None, 576)               0         \n",
-      "_________________________________________________________________\n",
-      "dense (Dense)                (None, 80)                46160     \n",
-      "_________________________________________________________________\n",
-      "dense_1 (Dense)              (None, 80)                6480      \n",
-      "_________________________________________________________________\n",
-      "reshape (Reshape)            (None, 40, 2)             0         \n",
+      "dense_6 (Dense)              (None, 25)                15225     \n",
       "=================================================================\n",
-      "Total params: 59,264\n",
-      "Trainable params: 59,264\n",
+      "Total params: 15,449\n",
+      "Trainable params: 15,449\n",
       "Non-trainable params: 0\n",
       "_________________________________________________________________\n",
       "None\n",
-      "Epoch 1/20\n",
-      "7011/7011 [==============================] - 17s 2ms/step - loss: 0.0028 - mean_absolute_error: 0.0330 - val_loss: 0.0030 - val_mean_absolute_error: 0.0339\n",
-      "Epoch 2/20\n",
-      "7011/7011 [==============================] - 14s 2ms/step - loss: 0.0026 - mean_absolute_error: 0.0317 - val_loss: 0.0030 - val_mean_absolute_error: 0.0335\n",
-      "Epoch 3/20\n",
-      "7011/7011 [==============================] - 14s 2ms/step - loss: 0.0025 - mean_absolute_error: 0.0312 - val_loss: 0.0029 - val_mean_absolute_error: 0.0327\n",
-      "Epoch 4/20\n",
-      "7011/7011 [==============================] - 14s 2ms/step - loss: 0.0025 - mean_absolute_error: 0.0311 - val_loss: 0.0031 - val_mean_absolute_error: 0.0331\n",
-      "Epoch 5/20\n",
-      "7011/7011 [==============================] - 14s 2ms/step - loss: 0.0025 - mean_absolute_error: 0.0309 - val_loss: 0.0030 - val_mean_absolute_error: 0.0328\n",
-      "Epoch 6/20\n",
-      "7011/7011 [==============================] - 14s 2ms/step - loss: 0.0025 - mean_absolute_error: 0.0308 - val_loss: 0.0030 - val_mean_absolute_error: 0.0331\n",
-      "Epoch 7/20\n",
-      "7011/7011 [==============================] - 14s 2ms/step - loss: 0.0025 - mean_absolute_error: 0.0308 - val_loss: 0.0029 - val_mean_absolute_error: 0.0326\n",
-      "Epoch 8/20\n",
-      "7011/7011 [==============================] - 14s 2ms/step - loss: 0.0025 - mean_absolute_error: 0.0307 - val_loss: 0.0029 - val_mean_absolute_error: 0.0328\n",
-      "Epoch 9/20\n",
-      "7011/7011 [==============================] - 14s 2ms/step - loss: 0.0025 - mean_absolute_error: 0.0307 - val_loss: 0.0029 - val_mean_absolute_error: 0.0325\n",
-      "Epoch 10/20\n",
-      "7011/7011 [==============================] - 14s 2ms/step - loss: 0.0025 - mean_absolute_error: 0.0306 - val_loss: 0.0030 - val_mean_absolute_error: 0.0328\n",
-      "Epoch 11/20\n",
-      "7011/7011 [==============================] - 14s 2ms/step - loss: 0.0024 - mean_absolute_error: 0.0306 - val_loss: 0.0029 - val_mean_absolute_error: 0.0326\n",
-      "Epoch 12/20\n",
-      "7011/7011 [==============================] - 14s 2ms/step - loss: 0.0024 - mean_absolute_error: 0.0306 - val_loss: 0.0030 - val_mean_absolute_error: 0.0328\n",
-      "Epoch 13/20\n",
-      "7011/7011 [==============================] - 14s 2ms/step - loss: 0.0024 - mean_absolute_error: 0.0305 - val_loss: 0.0029 - val_mean_absolute_error: 0.0325\n",
-      "Epoch 14/20\n",
-      "7011/7011 [==============================] - 14s 2ms/step - loss: 0.0024 - mean_absolute_error: 0.0305 - val_loss: 0.0030 - val_mean_absolute_error: 0.0328\n",
-      "Epoch 15/20\n",
-      "7011/7011 [==============================] - 14s 2ms/step - loss: 0.0024 - mean_absolute_error: 0.0305 - val_loss: 0.0029 - val_mean_absolute_error: 0.0329\n",
-      "Epoch 16/20\n",
-      "7011/7011 [==============================] - 14s 2ms/step - loss: 0.0024 - mean_absolute_error: 0.0305 - val_loss: 0.0029 - val_mean_absolute_error: 0.0323\n",
-      "Epoch 17/20\n",
-      "7011/7011 [==============================] - 14s 2ms/step - loss: 0.0024 - mean_absolute_error: 0.0305 - val_loss: 0.0029 - val_mean_absolute_error: 0.0325\n",
-      "Epoch 18/20\n",
-      "7011/7011 [==============================] - 14s 2ms/step - loss: 0.0024 - mean_absolute_error: 0.0305 - val_loss: 0.0029 - val_mean_absolute_error: 0.0324\n",
-      "Epoch 19/20\n",
-      "7011/7011 [==============================] - 13s 2ms/step - loss: 0.0024 - mean_absolute_error: 0.0305 - val_loss: 0.0030 - val_mean_absolute_error: 0.0331\n",
-      "Epoch 20/20\n",
-      "7011/7011 [==============================] - 14s 2ms/step - loss: 0.0024 - mean_absolute_error: 0.0304 - val_loss: 0.0030 - val_mean_absolute_error: 0.0329\n",
-      "Model: \"model_1\"\n",
-      "_________________________________________________________________\n",
-      "Layer (type)                 Output Shape              Param #   \n",
-      "=================================================================\n",
-      "input_2 (InputLayer)         [(None, 40, 2)]           0         \n",
-      "_________________________________________________________________\n",
-      "conv1d_2 (Conv1D)            (None, 38, 32)            224       \n",
-      "_________________________________________________________________\n",
-      "max_pooling1d_1 (MaxPooling1 (None, 19, 32)            0         \n",
-      "_________________________________________________________________\n",
-      "dropout (Dropout)            (None, 19, 32)            0         \n",
-      "_________________________________________________________________\n",
-      "flatten_1 (Flatten)          (None, 608)               0         \n",
-      "_________________________________________________________________\n",
-      "dense_2 (Dense)              (None, 80)                48720     \n",
-      "_________________________________________________________________\n",
-      "reshape_1 (Reshape)          (None, 40, 2)             0         \n",
-      "=================================================================\n",
-      "Total params: 48,944\n",
-      "Trainable params: 48,944\n",
-      "Non-trainable params: 0\n",
-      "_________________________________________________________________\n",
-      "None\n",
-      "Epoch 1/20\n",
-      "7011/7011 [==============================] - 11s 1ms/step - loss: 0.0029 - mean_absolute_error: 0.0344 - val_loss: 0.0031 - val_mean_absolute_error: 0.0350\n",
-      "Epoch 2/20\n",
-      "7011/7011 [==============================] - 10s 1ms/step - loss: 0.0028 - mean_absolute_error: 0.0335 - val_loss: 0.0033 - val_mean_absolute_error: 0.0359\n",
-      "Epoch 3/20\n",
-      "7011/7011 [==============================] - 10s 1ms/step - loss: 0.0028 - mean_absolute_error: 0.0334 - val_loss: 0.0032 - val_mean_absolute_error: 0.0352\n",
-      "Epoch 4/20\n",
-      "7011/7011 [==============================] - 10s 1ms/step - loss: 0.0027 - mean_absolute_error: 0.0333 - val_loss: 0.0031 - val_mean_absolute_error: 0.0348\n",
-      "Epoch 5/20\n",
-      "7011/7011 [==============================] - 10s 1ms/step - loss: 0.0027 - mean_absolute_error: 0.0333 - val_loss: 0.0032 - val_mean_absolute_error: 0.0353\n",
-      "Epoch 6/20\n",
-      "7011/7011 [==============================] - 10s 1ms/step - loss: 0.0027 - mean_absolute_error: 0.0333 - val_loss: 0.0032 - val_mean_absolute_error: 0.0354\n",
-      "Epoch 7/20\n",
-      "7011/7011 [==============================] - 11s 2ms/step - loss: 0.0028 - mean_absolute_error: 0.0333 - val_loss: 0.0032 - val_mean_absolute_error: 0.0352\n",
-      "Epoch 8/20\n",
-      "7011/7011 [==============================] - 10s 1ms/step - loss: 0.0027 - mean_absolute_error: 0.0333 - val_loss: 0.0032 - val_mean_absolute_error: 0.0350\n",
-      "Epoch 9/20\n",
-      "7011/7011 [==============================] - 10s 1ms/step - loss: 0.0027 - mean_absolute_error: 0.0333 - val_loss: 0.0033 - val_mean_absolute_error: 0.0355\n",
-      "Epoch 10/20\n",
-      "7011/7011 [==============================] - 10s 1ms/step - loss: 0.0027 - mean_absolute_error: 0.0333 - val_loss: 0.0031 - val_mean_absolute_error: 0.0349\n",
-      "Epoch 11/20\n",
-      "7011/7011 [==============================] - 10s 1ms/step - loss: 0.0027 - mean_absolute_error: 0.0333 - val_loss: 0.0033 - val_mean_absolute_error: 0.0360\n",
-      "Epoch 12/20\n",
-      "7011/7011 [==============================] - 11s 2ms/step - loss: 0.0027 - mean_absolute_error: 0.0333 - val_loss: 0.0032 - val_mean_absolute_error: 0.0352\n",
-      "Epoch 13/20\n",
-      "7011/7011 [==============================] - 11s 2ms/step - loss: 0.0027 - mean_absolute_error: 0.0333 - val_loss: 0.0032 - val_mean_absolute_error: 0.0352\n",
-      "Epoch 14/20\n",
-      "7011/7011 [==============================] - 11s 2ms/step - loss: 0.0027 - mean_absolute_error: 0.0333 - val_loss: 0.0033 - val_mean_absolute_error: 0.0356\n",
-      "Epoch 15/20\n",
-      "7011/7011 [==============================] - 11s 2ms/step - loss: 0.0027 - mean_absolute_error: 0.0333 - val_loss: 0.0033 - val_mean_absolute_error: 0.0353\n",
-      "Epoch 16/20\n",
-      "7011/7011 [==============================] - 11s 2ms/step - loss: 0.0027 - mean_absolute_error: 0.0333 - val_loss: 0.0033 - val_mean_absolute_error: 0.0362\n",
-      "Epoch 17/20\n",
-      "7011/7011 [==============================] - 10s 1ms/step - loss: 0.0027 - mean_absolute_error: 0.0333 - val_loss: 0.0033 - val_mean_absolute_error: 0.0360\n",
-      "Epoch 18/20\n",
-      "7011/7011 [==============================] - 10s 1ms/step - loss: 0.0027 - mean_absolute_error: 0.0333 - val_loss: 0.0032 - val_mean_absolute_error: 0.0355\n",
-      "Epoch 19/20\n",
-      "7011/7011 [==============================] - 10s 1ms/step - loss: 0.0027 - mean_absolute_error: 0.0333 - val_loss: 0.0032 - val_mean_absolute_error: 0.0356\n",
-      "Epoch 20/20\n",
-      "7011/7011 [==============================] - 10s 1ms/step - loss: 0.0027 - mean_absolute_error: 0.0332 - val_loss: 0.0032 - val_mean_absolute_error: 0.0352\n"
+      "Epoch 1/10\n",
+      "7124/7124 [==============================] - 11s 2ms/step - loss: 1.1478 - accuracy: 0.6268 - val_loss: 1.1588 - val_accuracy: 0.6095\n",
+      "Epoch 2/10\n",
+      "7124/7124 [==============================] - 11s 2ms/step - loss: 1.0832 - accuracy: 0.6415 - val_loss: 1.1475 - val_accuracy: 0.6104\n",
+      "Epoch 3/10\n",
+      "7124/7124 [==============================] - 10s 1ms/step - loss: 1.0730 - accuracy: 0.6449 - val_loss: 1.1346 - val_accuracy: 0.6182\n",
+      "Epoch 4/10\n",
+      "7124/7124 [==============================] - 11s 1ms/step - loss: 1.0679 - accuracy: 0.6464 - val_loss: 1.1336 - val_accuracy: 0.6231\n",
+      "Epoch 5/10\n",
+      "7124/7124 [==============================] - 10s 1ms/step - loss: 1.0652 - accuracy: 0.6467 - val_loss: 1.1310 - val_accuracy: 0.6223\n",
+      "Epoch 6/10\n",
+      "7124/7124 [==============================] - 10s 1ms/step - loss: 1.0627 - accuracy: 0.6476 - val_loss: 1.1228 - val_accuracy: 0.6230\n",
+      "Epoch 7/10\n",
+      "7124/7124 [==============================] - 10s 1ms/step - loss: 1.0607 - accuracy: 0.6475 - val_loss: 1.1207 - val_accuracy: 0.6285\n",
+      "Epoch 8/10\n",
+      "7124/7124 [==============================] - 11s 1ms/step - loss: 1.0592 - accuracy: 0.6490 - val_loss: 1.1245 - val_accuracy: 0.6231\n",
+      "Epoch 9/10\n",
+      "7124/7124 [==============================] - 10s 1ms/step - loss: 1.0583 - accuracy: 0.6482 - val_loss: 1.1172 - val_accuracy: 0.6267\n",
+      "Epoch 10/10\n",
+      "7124/7124 [==============================] - 11s 1ms/step - loss: 1.0567 - accuracy: 0.6487 - val_loss: 1.1257 - val_accuracy: 0.6204\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<keras.callbacks.History at 0x7fe82a44c700>"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "reload(models)\n",
+    "reload(model_path)\n",
+    "reload(model_goal)\n",
     "\n",
-    "model = None\n",
-    "print(train_data[0].shape)\n",
-    "# model, _ = models.simple_lstm(train_data, eval_data)\n",
-    "model, _ = models.simple_cnn(train_data, eval_data)\n",
+    "# print(train_data[0].shape)\n",
+    "# m_det = model.Model(model.simple_cnn(train_data))\n",
+    "# m_det.train(train_data, eval_data)\n",
+    "\n",
+    "\n",
+    "m_goal_estimator = model_goal.ModelGoal(model_goal.simple_cnn(train_data))\n",
+    "m_goal_estimator.train(train_data, eval_data)\n",
+    "\n",
+    "# m_det_goal = model_path.Model(model_path.simple_cnn(train_data), uses_goal=True)\n",
+    "# m_det_goal.train(train_data, eval_data)\n",
+    "\n",
     "# model, _ = models.simple_lstm_goal(train_data, eval_data)\n",
     "\n",
-    "model_prob, _ = models.simple_cnn_dropout(train_data, eval_data)\n",
+    "# model_prob, _ = model.simple_cnn_dropout(train_data)\n",
     "\n",
     "\n",
     "# model_no_goal, _ = models.simple_lstm(train_data, eval_data)\n",
     "# model_goal, _ = models.simple_lstm_goal(train_data, eval_data)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -318,8 +206,9 @@
     }
    ],
    "source": [
-    "reload(models)\n",
-    "model_prob, _ = models.simple_cnn_dropout(train_data, eval_data)"
+    "reload(model)\n",
+    "m_prob = model.Model(model.simple_cnn(train_data))\n",
+    "m_prob.train(train_data, eval_data)"
    ]
   },
   {
